[package]
name = "snark-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier", branch = "zkvm-v0.1", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-axiom",
] }
serde = "1.0.201"
serde_json = "1.0.117"
rand = "0.8.5"
eyre = "0.6.12"
lazy_static = "1.5.0"
itertools = "0.13.0"
alloy-primitives = { version = "0.8.7", default-features = false, features = [
    "serde",
] }
byteorder = "1.5.0"

[features]
default = ["display"]
display = ["snark-verifier-sdk/display"]
test-utils = []

[[example]]
name = "dummy"
required-features = ["test-utils"]
